# CpptSample

./: Makefile  README.md
cppt_sample/: CMakeLists.txt  Makefile  cosmosis_module.cpp  sampling_integration_batcher.h  values.ini
cppt_sample/AlphaAttractor/: CMakeLists.txt  attractor_model.model  cosmosis_module_attractor.cpp  sampling_integration_batcher.h
cppt_sample/AlphaAttractor/mcmc_run/: alpha_mcmc.ini  priors.ini  values.ini
cppt_sample/Chaotic_Inflation/: CMakeLists.txt  chaotic.model  cosmosis_module_chaotic.cpp  sampling_integration_batcher.h
cppt_sample/Chaotic_Inflation/chaotic_run/: chaotic_mcmc.ini  priors.ini  values.ini
cppt_sample/Gelaton/: CMakeLists.txt  cosmosis_module_gelaton.cpp  sampling_integration_batcher.h
cppt_sample/Gelaton/gelaton_mcmc/: gelaton_mcmc.ini  priors.ini  values.ini
cppt_sample/Quartic_Inflation/: CMakeLists.txt  cosmosis_module_quartic.cpp  quartic.model  sampling_integration_batcher.h
cppt_sample/Quartic_Inflation/quartic_mcmc/: priors.ini  quartic_mcmc.ini  values.ini
cppt_sample/Spectral_Index/: spectral_index_interface.py
cppt_sample/run/: cppt_sample.ini  cppt_sample_planck.ini  values.ini  values_planck.ini
cppt_sample/run/chaotic_WMAP7/: cppt_sample.ini  priors.ini  values.ini
cppt_sample/run/cppt_sample_chaotic/: cppt_sample.ini  values.ini
